visualize the resulting hierarchical tree for different features

--- a/github_repo_parser.ipynb
+++ b/github_repo_parser.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "17Ke5VkBRFkM1RIX9Vi1LDxLTGZGGN_vS",
-      "authorship_tag": "ABX9TyN5X9REULSP7J0fQDN3/xhO",
+      "authorship_tag": "ABX9TyOYrDlH2vB/qtR7nOp59sn+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3364,9 +3364,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DpA6KzNzkbVJ",
-        "outputId": "e491655d-e65b-475f-c8fa-677d60801031"
+        "outputId": "4436cb2b-e81c-4940-d116-ff64021118a4"
       },
-      "execution_count": 147,
+      "execution_count": 154,
       "outputs": [
         {
           "output_type": "stream",
@@ -3381,7 +3381,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "Batches: 100%|██████████| 3/3 [00:00<00:00,  3.69it/s]\n"
+            "Batches: 100%|██████████| 3/3 [00:00<00:00,  4.55it/s]\n"
           ]
         },
         {
@@ -3395,7 +3395,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 2/2 [00:00<00:00, 39.48it/s]\n"
+            "100%|██████████| 2/2 [00:00<00:00, 66.22it/s]\n"
           ]
         }
       ]
@@ -3881,15 +3881,15 @@
           "height": 597
         },
         "id": "KKkADAZPlx9b",
-        "outputId": "b27f6afa-99c9-4c6c-a001-653ed92b3612"
+        "outputId": "c16fe51a-befc-40e2-b99e-dcaf8f1a66a1"
       },
-      "execution_count": 129,
+      "execution_count": 150,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 2/2 [00:00<00:00, 43.88it/s]\n"
+            "100%|██████████| 2/2 [00:00<00:00, 74.14it/s]\n"
           ]
         },
         {
@@ -4104,7 +4104,7 @@
         "\n",
         "\n",
         "topic_model = load_topic_model()\n",
-        "topics, probs = fit_topic_model(topic_model, data, agg_features)\n",
+        "topics, probs = fit_topic_model(topic_model, data, embs)\n",
         "freq = get_topic_info(topic_model)\n",
         "rep_docs = get_representative_docs(topic_model)\n",
         "freq\n"
@@ -4112,31 +4112,29 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 332
+          "height": 269
         },
         "id": "ZkHM1vkgdvtI",
-        "outputId": "952ff55b-d949-44ab-bf83-9903afabcf7e"
+        "outputId": "441870c5-e2c2-4859-b0d6-dfb138cdec8b"
       },
-      "execution_count": 132,
+      "execution_count": 158,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "   Topic  Count                                               Name\n",
-              "0     -1     80  -1_Visualizing topic evolution over time with ...\n",
-              "1      0    185  0_Visualization of hierarchical topics using s...\n",
-              "2      1     63  1_Text Generation with Transformers - Adding D...\n",
-              "3      2     50      2_Topic Mapping and Management in BERTopic___\n",
-              "4      3     20  3_Scikit-Learn based document and word embeddi...\n",
-              "5      4     19  4_Class-based TF-IDF procedure and c-TF-IDF fo...\n",
-              "6      5     18  5_HDBSCAN implementation for generating predic...\n",
-              "7      6     13  6_Online CountVectorizer with Updating Vocabul...\n",
-              "8      7     12  7_Notification of missing dependencies for str..."
+              "0     -1    151  -1_Using OpenAI API for topic labeling with BE...\n",
+              "1      0    171    0_Gensim Embedding Model for Word Embeddings___\n",
+              "2      1     84                 1_Topic Visualization Over Time___\n",
+              "3      2     20  2_HDBSCAN model prediction function and its op...\n",
+              "4      3     12  3_Online updating of Bag of Words using CountV...\n",
+              "5      4     11  4_Check whether input documents are a list of ...\n",
+              "6      5     11  5_topic label: Logging with Python's MyLogger ..."
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1f95cdce-f504-4e19-8f4b-6ee1f1244112\">\n",
+              "  <div id=\"df-ed098934-4c89-4c40-b238-661805f4e224\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -4165,61 +4163,49 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>-1</td>\n",
-              "      <td>80</td>\n",
-              "      <td>-1_Visualizing topic evolution over time with ...</td>\n",
+              "      <td>151</td>\n",
+              "      <td>-1_Using OpenAI API for topic labeling with BE...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>0</td>\n",
-              "      <td>185</td>\n",
-              "      <td>0_Visualization of hierarchical topics using s...</td>\n",
+              "      <td>171</td>\n",
+              "      <td>0_Gensim Embedding Model for Word Embeddings___</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
               "      <td>1</td>\n",
-              "      <td>63</td>\n",
-              "      <td>1_Text Generation with Transformers - Adding D...</td>\n",
+              "      <td>84</td>\n",
+              "      <td>1_Topic Visualization Over Time___</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
               "      <td>2</td>\n",
-              "      <td>50</td>\n",
-              "      <td>2_Topic Mapping and Management in BERTopic___</td>\n",
+              "      <td>20</td>\n",
+              "      <td>2_HDBSCAN model prediction function and its op...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
               "      <td>3</td>\n",
-              "      <td>20</td>\n",
-              "      <td>3_Scikit-Learn based document and word embeddi...</td>\n",
+              "      <td>12</td>\n",
+              "      <td>3_Online updating of Bag of Words using CountV...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>5</th>\n",
               "      <td>4</td>\n",
-              "      <td>19</td>\n",
-              "      <td>4_Class-based TF-IDF procedure and c-TF-IDF fo...</td>\n",
+              "      <td>11</td>\n",
+              "      <td>4_Check whether input documents are a list of ...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>6</th>\n",
               "      <td>5</td>\n",
-              "      <td>18</td>\n",
-              "      <td>5_HDBSCAN implementation for generating predic...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>6</td>\n",
-              "      <td>13</td>\n",
-              "      <td>6_Online CountVectorizer with Updating Vocabul...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>7</td>\n",
-              "      <td>12</td>\n",
-              "      <td>7_Notification of missing dependencies for str...</td>\n",
+              "      <td>11</td>\n",
+              "      <td>5_topic label: Logging with Python's MyLogger ...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1f95cdce-f504-4e19-8f4b-6ee1f1244112')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ed098934-4c89-4c40-b238-661805f4e224')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -4270,12 +4256,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1f95cdce-f504-4e19-8f4b-6ee1f1244112 button.colab-df-convert');\n",
+              "          document.querySelector('#df-ed098934-4c89-4c40-b238-661805f4e224 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1f95cdce-f504-4e19-8f4b-6ee1f1244112');\n",
+              "          const element = document.querySelector('#df-ed098934-4c89-4c40-b238-661805f4e224');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -4298,7 +4284,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 132
+          "execution_count": 158
         }
       ]
     },
@@ -4312,18 +4298,160 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PpwXk8cwfKAX",
-        "outputId": "8066c680-53e2-4fe8-bb30-681afff0bb8f"
+        "outputId": "a232592c-c72a-43e9-bdf8-0d14d8a202da"
       },
-      "execution_count": 133,
+      "execution_count": 159,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 7/7 [00:11<00:00,  1.64s/it]\n"
+            "100%|██████████| 5/5 [00:08<00:00,  1.66s/it]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A"
+      ],
+      "metadata": {
+        "id": "RkAwWJ_B-Lwa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tree)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uetZcAC5-Ivr",
+        "outputId": "3dcdb8da-0133-492a-a212-6c7f4d10b24e"
+      },
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ".\n",
+            "├─■──topic label: Logging with Python's MyLogger class____ ── Topic: 5\n",
+            "└─Topic visualization and analysis with topic embeddings____\n",
+            "     ├─HDBSCAN model selection and prediction using cuml_hdbscan_approx in Python____\n",
+            "     │    ├─■──HDBSCAN model prediction function and its options description____ ── Topic: 2\n",
+            "     │    └─■──Check whether input documents are a list of strings using isinstance() and Iterable class____ ── Topic: 4\n",
+            "     └─Visualizing topics in a document class with embeddings and word lists____\n",
+            "          ├─Topic visualization with embeddings and time series analysis____\n",
+            "          │    ├─■──Topic Visualization Over Time____ ── Topic: 1\n",
+            "          │    └─■──Gensim Embedding Model for Word Embeddings____ ── Topic: 0\n",
+            "          └─■──Online updating of Bag of Words using CountVectorizer and partial_fit in Scikit-learn____ ── Topic: 3\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "A_k"
+      ],
+      "metadata": {
+        "id": "bc3oIrto9zmD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tree)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P11pV2jE9ufS",
+        "outputId": "fd72c0e5-5619-45cc-c44e-ece3d0809603"
+      },
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ".\n",
+            "├─Python Logging with Custom Handlers and Levels____\n",
+            "│    ├─■──Logging and Handlers in Python with MyLogger Class____ ── Topic: 7\n",
+            "│    └─■──Notifying Users of Missing Dependencies in String Matching Model____ ── Topic: 6\n",
+            "└─Topic visualization with embeddings and HDBSCAN clustering____\n",
+            "     ├─Topic visualization with embeddings and custom labels____\n",
+            "     │    ├─HDBSCAN model selection and prediction with \"hdbscan_delegator\" function____\n",
+            "     │    │    ├─■──\"Function for generating predictions and probabilities using HDBSCAN-like model\"____ ── Topic: 4\n",
+            "     │    │    └─■──Checking input data type and model fitted status____ ── Topic: 3\n",
+            "     │    └─Topic visualization and analysis with embeddings.____\n",
+            "     │         ├─Topic Visualization with Embeddings____\n",
+            "     │         │    ├─■──Topic Visualization with Plotly____ ── Topic: 0\n",
+            "     │         │    └─■──Gensim Backend for Word Embeddings____ ── Topic: 1\n",
+            "     │         └─■──Incomplete code and docstring for function with TODOs for error handling and examples____ ── Topic: 2\n",
+            "     └─■──Scikit-learn pipeline for class-based TF-IDF and BM25 weighting with term frequency reduction and tr ── Topic: 5\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "LA"
+      ],
+      "metadata": {
+        "id": "Et1ePMto91SH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(tree)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EKTfoy9W8xYo",
+        "outputId": "58020b98-d343-4eb9-c517-6729e0ddc46e"
+      },
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            ".\n",
+            "├─■──Class-based TF-IDF procedure with c-TF-IDF formula____ ── Topic: 5\n",
+            "└─Visualization of top topics per document class using topic model embeddings____\n",
+            "     ├─Visualizing Topics Per Class using BERTopic Model and Custom Labels____\n",
+            "     │    ├─■──Topic visualization with topic_model using Plotly in Python____ ── Topic: 0\n",
+            "     │    └─Text generation with transformers in Spacy backend____\n",
+            "     │         ├─■──Code checking and potential issues with input type and error messages____ ── Topic: 1\n",
+            "     │         └─■──Text Generation with Spacy NLP and Transformers____ ── Topic: 2\n",
+            "     └─Gensim and SentenceTransformer Embeddings____\n",
+            "          ├─■──Scikit-Learn based embeddings with HDBSCAN clustering and document predictions____ ── Topic: 3\n",
+            "          └─■──Gensim and SentenceTransformer embeddings with FastText and Word2Vec____ ── Topic: 4\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "LA_k"
+      ],
+      "metadata": {
+        "id": "QmTNQVqg92vF"
+      }
     },
     {
       "cell_type": "code",
