--- a/github_repo_parser.ipynb
+++ b/github_repo_parser.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "17Ke5VkBRFkM1RIX9Vi1LDxLTGZGGN_vS",
-      "authorship_tag": "ABX9TyOYrDlH2vB/qtR7nOp59sn+",
+      "authorship_tag": "ABX9TyMbhxt+ty3DL6m5czZsuGrH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2936,7 +2936,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 423
         },
         "id": "YijNKWTEtyTd",
         "outputId": "910b8520-1672-412c-dc0f-35d856f34744"
@@ -3486,7 +3486,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 579
+          "height": 580
         },
         "id": "Uq4wCYsdoHw_",
         "outputId": "e56cfbe6-0f36-4aea-8a39-a83fbc34071b"
@@ -3533,7 +3533,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 579
+          "height": 580
         },
         "id": "Hw24e70nocZn",
         "outputId": "304fd595-6697-4fbe-a219-809767fb0195"
@@ -3592,7 +3592,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 579
+          "height": 580
         },
         "id": "faw638XQoSDo",
         "outputId": "6d419034-85eb-4c6b-e3a1-dacbd5d5d1a4"
@@ -3680,7 +3680,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 579
+          "height": 580
         },
         "id": "vyuFvY59omyQ",
         "outputId": "f23f997f-2af5-4752-d6b9-0ea1c7588837"
@@ -3878,7 +3878,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 597
+          "height": 598
         },
         "id": "KKkADAZPlx9b",
         "outputId": "c16fe51a-befc-40e2-b99e-dcaf8f1a66a1"
@@ -3933,7 +3933,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 597
+          "height": 598
         },
         "id": "XWFP2Rn-ua7W",
         "outputId": "a54d2c94-b980-4b27-8189-3028ba1f7868"
@@ -4112,7 +4112,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 269
+          "height": 268
         },
         "id": "ZkHM1vkgdvtI",
         "outputId": "441870c5-e2c2-4859-b0d6-dfb138cdec8b"
@@ -4404,7 +4404,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "LA"
+        "**LA** message passing"
       ],
       "metadata": {
         "id": "Et1ePMto91SH"
@@ -4447,7 +4447,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "LA_k"
+        "LA_k message passing"
       ],
       "metadata": {
         "id": "QmTNQVqg92vF"
